Add filtering for siege&group contracts and amendments